<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="saved_elections">Saved Elections</string>

    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>

    <string name="ballot_image_content_desc">Ballot Image</string>


    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

    <string name="location_settings">Location Settings</string>



    <string name="error_voting_location_url_undefined">Voting Location Url can not be found</string>
    <string name="error_ballot_information_url_undefined">Ballot Information Url can not be found</string>
    <string name="error_permission_denied_explanation">You need to grant location permission in order to use current location</string>
    <string name="error_location_required">Location services must be enabled to use current location</string>

    <string name="error_address_line_1_required">Address Line 1 field cannot be empty</string>
    <string name="error_state_required">State field cannot be empty</string>
    <string name="error_city_required">City field cannot be empty</string>
    <string name="error_zip_required">Zip field cannot be empty</string>


</resources>
