<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/electionsImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ballot_image_content_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.229"
            app:srcCompat="@drawable/ballot_logo" />

        <Button
            android:id="@+id/upcomingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:background="@color/colorPrimaryDark"
            android:text="@string/upcoming_elections"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/representativeButton"
            app:layout_constraintEnd_toEndOf="@+id/electionsImageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/electionsImageView" />

        <Button
            android:id="@+id/representativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:background="@color/colorPrimaryDark"
            android:text="@string/find_my_representatives"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/upcomingButton"
            app:layout_constraintStart_toStartOf="@+id/upcomingButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>